# stix-threat-intel-platform

./: .env.example  .gitignore  Dockerfile  Makefile  PUSH_TO_GITHUB.ps1  README.md  app.py  ci.yml  deploy.yml  docker-compose.yml  env.example  fix_main.py  main.py  main_patch.py  migrate_db.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py  scheduler.py
.github/workflows/: ci.yml  deploy.yml
app/alerts/: __init__.py  router.py
app/api/: logs_router.py  main.py  ml.py
app/auth/: __init__.py  models.py  router.py  security.py
app/correlation/: __init__.py  engine.py
app/database/: __init__.py  db_manager.py
app/ingestion/: __init__.py  ioc_manager.py  log_checker.py  scheduler.py  taxii_client.py
app/ml/: __init__.py  classifier.py  detector.py  features.py  log_analyzer.py  nslkdd_preprocessor.py
app/normalization/: __init__.py  parser_json.py  parser_xml.py  stix_parser.py
app/utils/: __init__.py  ip_validator.py  logger.py  report_generator.py
data/: TI_GOV.json  event_data.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
models/: rf_evaluation.json
scripts/: cleanup.py  cleanup_now.py  init_db.py  train_classifier.py
tests/: __init__.py  conftest.py  test_alerts.py  test_api.py  test_auth.py  test_core.py  test_database.py  test_ingestion.py  test_log_analysis.py  test_ml.py  test_ml_hybrid.py  test_pipeline.py
